--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -2,7 +2,7 @@
 <div class="comments">
 <div id="disqus_thread"></div>
 <script type="text/javascript">
-var disqus_shortname = 'https-anantguptadbl-github-io';
+var disqus_shortname = 'anantBlog';
 (function() {
 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
 dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
